# TZ_Savchenko

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
bitrix24/: googlesheets.py  models.py  serializers.py  services.py  urls.py  views.py
compose/django/: Dockerfile
compose/nginx/: Dockerfile  nginx.conf
config/: settings.py  urls.py
